<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HEI-Connect</string>
    <string name="generic_error">Erreur</string>
    <string name="generic_close">Fermer</string>
    <string name="generic_time_about">Il y a </string>
    <string name="generic_time_now">À l\'instant</string>
    <string name="generic_time_on">Le %s</string>
    <string name="generic_time_hour">%dh</string>
    <string name="generic_time_minute">%d min</string>
    <string name="generic_time_second">%d s</string>
    <string name="menu_logout">Déconnexion</string>

    <!-- SPLASH SCREEN -->
    <string name="splash_outdated_title">Version périmée</string>
    <string name="splash_outdated_message">Tu dois mettre à jour l\'application pour continuer à l\'utiliser</string>
    <string name="splash_maintenance_title">Maintenance</string>

    <!-- LOGIN SCREEN -->
    <string name="login_title">Connexion</string>
    <string name="login_login_hint">Identifiant</string>
    <string name="login_password_hint">Mot de passe</string>
    <string name="login_submit">Envoyer</string>
    <string name="login_bad_credentials_title">Identifiants incorrects !</string>
    <string name="login_not_signed_up_title">Pas encore inscrit</string>

    <!-- MAIN SCREEN -->
    <string name="main_tab_title_today">Aujourd\'hui</string>
    <string name="main_tab_title_tomorrow">Demain</string>
    <string name="main_tab_title_grades">Notes</string>
    <string name="main_tab_title_absences">Absences</string>

    <!-- GRADES SCREEN -->
    <string name="grades_empty">Pas de notes trouvées !</string>

    <!-- ABSENCES SCREEN -->
    <string name="absences_empty">Pas d\'absences trouvées !</string>

    <!-- COURSE CELL VIEW -->
    <string name="cellview_course_name">%1$s de %2$s</string>

    <!-- EMPTY SCHEDULE CELL VIEW -->
    <string name="cellview_schedule_empty">Pas de cours trouvé !</string>
    <string name="cellview_schedule_check">Mais check quand même e-campus si tu trouves ça bizarre ;)</string>

    <!-- UPDATE HEADER VIEW -->
    <string name="headerview_update_last_sync_state_ok">Dernière synchronisation réussie avec e-campus:</string>
    <string name="headerview_update_last_sync_state_failed">La dernière synchronisation avec e-campus a échoué</string>
    <string name="headerview_update_last_sync_state_disabled">La synchronisation de l\'emploi du temps avec e-campus est désactivée</string>
    <string name="headerview_update_last_sync_state_scheduled">La prochaine synchronisation avec e-campus est programmée et en attente</string>
    <string name="headerview_update_last_sync_state_updating">Synchronisation en cours avec e-campus</string>
    <string name="headerview_update_last_sync_state_unknown">Aucune informations sur La dernière synchronisation avec e-campus</string>
    <string name="infodialog_caption_ecampus">e-campus</string>
    <string name="infodialog_caption_heiconnect">hei-connect.eu</string>
    <string name="infodialog_caption_android">hei-connect\nandroid</string>
    <string name="infodialog_caption_once_day">1x par jour</string>
    <string name="infodialog_caption_on_demand">à la demande</string>
    <string name="infodialog_content">HEI-Connect n\'a pas d\'accès direct à la base de données d\'e-campus.\nPour se mettre à jour, une visite sur e-campus.hei.fr est effectuée automatiquement.\nCette visite est longue, couteuse en ressources, et doit être effectuée pour tous les inscrits d\'hei-connect. Elle n\'est donc effectuée qu\'une fois par jour.\nIl est donc possible que les données d\'hei-connect soient périmées entre deux mises à jour.\nSoyez vigilant concernant l\'emploi du temps, notamment lorsque vous avez des examens.</string>

    <!-- GRADE CELL VIEW -->
    <string name="cellview_grade_count">Moyenne calculée d\'après %d élèves :</string>

</resources>
